# zynaddsubfx

./: CMakeLists.txt
ExternalPrograms/Controller/: CMakeLists.txt
cmake/: FindFFTW.cmake  FindLIBLO.cmake  FindMXML.cmake  FindPORTAUDIO.cmake  FindPTHREAD.cmake  FindVST.cmake
src/: CMakeLists.txt  defs.def  globals.h  snappinggraphicsitem.cpp  snappinggraphicsitem.h  zynaddsubfx.cpp  zynmusicstudio.cpp
src/DSP/: FFTwrapper.cpp  FFTwrapper.h  Unison.cpp
src/Effects/: CMakeLists.txt
src/Misc/: Bank.cpp  CMakeLists.txt  Master.cpp  Part.cpp  Util.cpp  XMLwrapper.cpp  XMLwrapper.h
src/Mxml/: CMakeLists.txt  config.h  mxml-file.c  mxmldoc.c
src/Nio/: CMakeLists.txt  MidiIn.cpp  MidiIn.h  NulEngine.cpp  OutMgr.cpp  RtEngine.cpp  RtEngine.h
src/QUI/: CMakeLists.txt  channelclip.cpp  channelcontainer.cpp  channelcontainer.h  channelcontainer.ui  channelwindow.cpp  channelwindow.h  channelwindow.ui  instrumentcontainer.cpp  instrumentcontainer.h  instrumentcontainer.ui  instrumentcontrol.ui  instrumentwindow.cpp  instrumentwindow.h  instrumentwindow.ui  keyboard.cpp  keyboard.h  keyboard.ui  kitwindow.cpp  kitwindow.h  kitwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  partcontainer.cpp  partcontainer.h  partcontainer.ui  partwindow.cpp  partwindow.h  partwindow.ui  zynapplication.cpp
src/Sequence/: CMakeLists.txt  midiclip.cpp  midiclip.h  sequence.cpp  sequence.h
src/Synth/: ADnote.cpp
src/UI/: CMakeLists.txt  ConfigUI.fl  OscilGenUI.fl  PADnoteUI.fl  WidgetPDial.cpp
src/Vst/: VstAudioOutput.cpp
src/ZMS/: CMakeLists.txt  channelclip.cpp  channelclip.h  channelcontainer.cpp  channelcontainer.h  channelcontainer.ui  channelwindow.cpp  channelwindow.h  instrumentcontainer.cpp  instrumentcontainer.h  instrumentcontainer.ui  instrumentcontrol.cpp  instrumentcontrol.h  instrumentcontrol.ui  instrumentwindow.cpp  instrumentwindow.h  keyboard.cpp  keyboard.h  keyboard.ui  kitwindow.cpp  kitwindow.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  pianoroll.cpp  pianoroll.h  pianoroll.ui  pianorollnote.cpp  pianorollnote.h  snappingcontainer.cpp  snappingcontainer.h  snappinggraphicsitem.cpp  snappinggraphicsitem.h  synthdata.cpp  synthdata.h  zynapplication.cpp
